--- a/webapp/static/front/css/table.css
+++ b/webapp/static/front/css/table.css
@@ -4,7 +4,7 @@ ul{margin:0;padding:0;list-style:none;}
 .table-column-group{display:table-column-group;}  
 .table-column{display:table-column;width:300px;}  
 .table-row-group{display:table-row-group;}  
-.table-row{display:table-row;}  
+.table-row{display:table-row;font-size:14px;}
 .table-row-group .table-row:hover,.table-footer-group .table-row:hover{background:#f6f6f6;}  
 .table-cell{display:table-cell;padding:0 5px;border:1px solid #ccc;text-align:center;vertical-align:bottom;}  
 .table-header-group{display:table-header-group;background:#eee;}  
